# contextflow

./: AGENTS.md  CONCEPTUAL_WORK_GUIDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_ORGANIZATION.md  LICENSE  MVP-01K66F582S2RBX0JCGDZ8ZSKJQ.md  MVP.md  README.md  TESTING.md  WARP.md  bandit-report.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
examples/: README.md  UserService.java  application.yml  example_tree_sitter.py  mcp_code_analyzer.py
research/: EXECUTIVE_SUMMARY.md  copilot-instructions.md
research/architecture/: ARCHITECTURE_OPTIONS.md  KNOWLEDGE_GRAPH_DESIGN.md  MULTIMODAL_INPUT_PROCESSING.md  PLUGIN_SYSTEM.md
research/comparisons/: INTEGRATION_COMPARISON.md
research/existing-solutions/: COMPETITIVE_ANALYSIS.md
research/meta-analysis/: DOCUMENTATION_CONSISTENCY.md
research/problem-analysis/: ASSUMPTION_INVALIDATION.md  CONTEXT_ENGINEERING.md  CONTEXT_OPTIMIZATION.md  CROSS_FILE_DEPENDENCIES.md  PROBLEM_DEFINITION.md
research/tools/: AI_GUI_COMPARISON.md  GRAPH_VISUALIZATION.md  WARP.md
specs/001-implement-github-projects/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/code_indexer/: __init__.py  indexer.py
src/config/: github_config.py
src/graph/: github_schema.py
src/mcp/: __init__.py  server.py
src/neo4j_integration/: __init__.py  c4_diagram.py  client.py  install.py  models.py  schema.py
tests/contract/: test_connect_neo4j.py  test_create_schema.py  test_github_issues_api.py  test_github_milestones_api.py  test_github_projects_api.py  (+1 more)
(+23 files in other folders)
