[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextflow"
version = "0.1.0"
description = "Context Engineering Platform for AI-Powered Development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGitHub>=2.0.0",
    "neo4j>=5.0.0",
    "docker>=6.0.0",
    "mcp>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
markers = [
    "contract: marks tests as contract tests (deselect with '-m \"not contract\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]